import "goby/common/protobuf/option_extensions.proto";
import "dccl/option_extensions.proto";

message ChatMessage
{
    option (dccl.msg).id = 2;
    option (dccl.msg).max_bytes = 32;

    required int32 destination = 1
        [(dccl.field).max = 30, (dccl.field).min = 0];

    required int32 source = 2 [(dccl.field).max = 30, (dccl.field).min = 0];

    required string telegram = 3 [(dccl.field).max_length = 26];
}
